Add tweets.html with embedded tweet and update index.html with link

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -17,10 +17,12 @@
 
   <h3>Projects</h3>
   <p>A list of cool projects I have worked on.</p>
+  <p><a href="tweets.html">See My Tweets</a></p>
 
   <a href="https://www.alx.com">
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
   </a>
+  
 </body>
 </html>
 
