Standardize HTML structure: header, main with article+aside, footer

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,27 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Portfolio Index</title>
+  <title>My Homepage</title>
 </head>
 <body>
-  <h1>Welcome to My Portfolio</h1>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <p>This is the first paragraph, introducing the website.</p>
-  <p>This is the second paragraph, explaining what you can find here.</p>
-  <p>This is the third paragraph, giving a brief background about me.</p>
-  <p>This is the fourth paragraph, inviting visitors to explore the projects.</p>
+  <main>
+    <article>
+      <h1>Welcome to My Homepage</h1>
+      <h2>About Me</h2>
+      <h3>My Interests</h3>
+      <p>Paragraph 1</p>
+      <p>Paragraph 2</p>
+      <p>Paragraph 3</p>
+      <p>Paragraph 4</p>
+      <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" />
+      <p><a href="tweets.html">See My Tweets</a></p>
+    </article>
 
-  <h2>About Me</h2>
-  <p>Some info about my skills, experience, and interests.</p>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
-  <h3>Projects</h3>
-  <p>A list of cool projects I have worked on.</p>
-  <p><a href="tweets.html">See My Tweets</a></p>
-
-  <a href="https://www.alx.com">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-  </a>
-  
+  <footer>
+    <p>Made by YOUR NAME - <a href="https://your-link.com" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
-
