--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,17 +5,31 @@
   <title>My Tweets</title>
 </head>
 <body>
-  <h1>Check Out My Tweets</h1>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <p>Here is an embedded tweet:</p>
+  <main>
+    <article>
+      <h1>My Tweets</h1>
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">Learning HTML is fun! #webdev</p>&mdash; YourName (@yourhandle) 
+        <a href="https://twitter.com/yourhandle/status/1234567890123456789">March 1, 2025</a>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <p><a href="index.html">Back to Homepage</a></p>
+    </article>
 
-  <!-- Example embedded tweet -->
-  <blockquote class="twitter-tweet">
-    <p lang="en" dir="ltr">Learning HTML is fun! #webdev</p>&mdash; YourName (@yourhandle) 
-    <a href="https://twitter.com/yourhandle/status/1234567890123456789">March 1, 2025</a>
-  </blockquote>
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
-  <p><a href="index.html">Back to Homepage</a></p>
+  <footer>
+    <p>Made by YOUR NAME - <a href="https://your-link.com" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
