Standardize HTML structure: header, main with article+aside, footer

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,71 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Homepage</title>
+  <meta charset="utf-8">
+  <title>Your Name - Personal Portfolio</title>
 </head>
 <body>
+
+  <!-- Header -->
   <header>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="tweets.html">Tweets</a></li>
-    </ul>
+    <h1>Your Name</h1>
+    <p>Creative Web Developer & Problem Solver</p>
   </header>
 
-  <main>
-    <article>
-      <h1>Welcome to My Homepage</h1>
-      <h2>About Me</h2>
-      <h3>My Interests</h3>
-      <p>Paragraph 1</p>
-      <p>Paragraph 2</p>
-      <p>Paragraph 3</p>
-      <p>Paragraph 4</p>
-      <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" />
-      <p><a href="tweets.html">See My Tweets</a></p>
+  <!-- Navigation -->
+  <nav>
+    <ul>
+      <li><a href="#introduction">Introduction</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 
-      <!-- Table of learners -->
-      <table border="1">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Country</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>John</td>
-            <td>25</td>
-            <td>USA</td>
-          </tr>
-          <tr>
-            <td>Emily</td>
-            <td>28</td>
-            <td>Canada</td>
-          </tr>
-          <tr>
-            <td>Michael</td>
-            <td>32</td>
-            <td>Australia</td>
-          </tr>
-          <tr>
-            <td>Sophia</td>
-            <td>21</td>
-            <td>UK</td>
-          </tr>
-        </tbody>
-      </table>
+  <!-- Introduction Section -->
+  <section id="introduction">
+    <h2>Introduction</h2>
+    <p>Hello! I’m a passionate web developer with experience in building responsive and user-friendly websites. I enjoy learning new technologies and solving challenging problems.</p>
+  </section>
 
+  <!-- Projects Section -->
+  <section id="projects">
+    <h2>Projects</h2>
+
+    <article class="project">
+      <h3>Project One</h3>
+      <p>This project is a responsive landing page built with HTML, CSS, and JavaScript.</p>
+      <a href="https://github.com/yourusername/project-one" target="_blank">View Project</a>
     </article>
 
-    <aside>
-      <p>placeholder to add comment thread later</p>
-    </aside>
-  </main>
+    <article class="project">
+      <h3>Project Two</h3>
+      <p>A full-stack web application that allows users to manage tasks efficiently.</p>
+      <a href="https://github.com/yourusername/project-two" target="_blank">View Project</a>
+    </article>
 
+  </section>
+
+  <!-- About Me Section -->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I have a background in software development and enjoy creating interactive web experiences.</p>
+    <ul>
+      <li>Skills: HTML, CSS, JavaScript, Node.js, React</li>
+      <li>Hobbies: Football, Traveling, Reading Tech Blogs</li>
+    </ul>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>
+      LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Visit Profile</a><br>
+      GitHub: <a href="https://github.com/yourusername" target="_blank">Visit GitHub</a>
+    </p>
+  </section>
+
+  <!-- Footer -->
   <footer>
-    <p>Made by YOUR NAME - <a href="https://your-link.com" target="_blank">here</a></p>
+    <p>&copy; 2025 Your Name</p>
   </footer>
+
 </body>
 </html>
