Standardize HTML structure: header, main with article+aside, footer

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,73 +2,73 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Your Name - Personal Portfolio</title>
+  <title>Abdelmounaim - Personal Portfolio</title>
 </head>
 <body>
 
   <!-- Header -->
   <header>
-    <h1>Your Name</h1>
-    <p>Creative Web Developer & Problem Solver</p>
+    <h1>Abdelmounaim</h1>
+    <p>Full-Stack Developer & Tech Enthusiast</p>
+    <nav>
+      <ul>
+        <li><a href="#introduction">Introduction</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <!-- Navigation -->
-  <nav>
-    <ul>
-      <li><a href="#introduction">Introduction</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#about">About Me</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+  <!-- Main content -->
+  <main>
+    <article>
 
-  <!-- Introduction Section -->
-  <section id="introduction">
-    <h2>Introduction</h2>
-    <p>Hello! I’m a passionate web developer with experience in building responsive and user-friendly websites. I enjoy learning new technologies and solving challenging problems.</p>
-  </section>
+      <!-- Introduction Section -->
+      <section id="introduction">
+        <h2>Introduction</h2>
+        <p>Hello! I am Abdelmounaim, a passionate developer learning full-stack web development. I love building projects and solving problems with code.</p>
+      </section>
 
-  <!-- Projects Section -->
-  <section id="projects">
-    <h2>Projects</h2>
+      <!-- Projects Section -->
+      <section id="projects">
+        <h2>Projects</h2>
+        <article class="project">
+          <h3>Project One</h3>
+          <p>A simple web application demonstrating HTML, CSS, and JavaScript skills.</p>
+          <a href="https://github.com/abdelmounaim/project-one" target="_blank">View Project</a>
+        </article>
+        <article class="project">
+          <h3>Project Two</h3>
+          <p>A data analytics project using Python and Pandas to visualize data.</p>
+          <a href="https://github.com/abdelmounaim/project-two" target="_blank">View Project</a>
+        </article>
+      </section>
 
-    <article class="project">
-      <h3>Project One</h3>
-      <p>This project is a responsive landing page built with HTML, CSS, and JavaScript.</p>
-      <a href="https://github.com/yourusername/project-one" target="_blank">View Project</a>
+      <!-- About Me Section -->
+      <section id="about">
+        <h2>About Me</h2>
+        <p>I have a strong interest in web development, data science, and technology innovation. I enjoy learning new frameworks and building projects that solve real-world problems.</p>
+      </section>
+
+      <!-- Contact Section -->
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:abdelmounaim@example.com">abdelmounaim@example.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/abdelmounaim" target="_blank">My Profile</a></p>
+        <p>GitHub: <a href="https://github.com/abdelmounaim" target="_blank">My Repositories</a></p>
+      </section>
+
     </article>
 
-    <article class="project">
-      <h3>Project Two</h3>
-      <p>A full-stack web application that allows users to manage tasks efficiently.</p>
-      <a href="https://github.com/yourusername/project-two" target="_blank">View Project</a>
-    </article>
-
-  </section>
-
-  <!-- About Me Section -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I have a background in software development and enjoy creating interactive web experiences.</p>
-    <ul>
-      <li>Skills: HTML, CSS, JavaScript, Node.js, React</li>
-      <li>Hobbies: Football, Traveling, Reading Tech Blogs</li>
-    </ul>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-    <p>
-      LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Visit Profile</a><br>
-      GitHub: <a href="https://github.com/yourusername" target="_blank">Visit GitHub</a>
-    </p>
-  </section>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Your Name</p>
+    <p>Made by Abdelmounaim - <a href="https://github.com/abdelmounaim" target="_blank">here</a> &copy; 2025</p>
   </footer>
 
 </body>
