Standardize HTML structure: header, main with article+aside, footer

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -54,9 +54,9 @@
       <!-- Contact Section -->
       <section id="contact">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:abdelmounaim@example.com">abdelmounaim@example.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/abdelmounaim" target="_blank">My Profile</a></p>
-        <p>GitHub: <a href="https://github.com/abdelmounaim" target="_blank">My Repositories</a></p>
+        <p>Email: <a href="mailto:abdelmounaimbahji@gmail.com">abdelmounaim@example.com</a></p>
+        <p>LinkedIn: <a href="www.linkedin.com/in/abdelmounaime-bahji-77b624354" target="_blank">My Profile</a></p>
+        <p>GitHub: <a href="abdelmounaimbahji-bit" target="_blank">My Repositories</a></p>
       </section>
 
     </article>
@@ -68,7 +68,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>Made by Abdelmounaim - <a href="https://github.com/abdelmounaim" target="_blank">here</a> &copy; 2025</p>
+    <p>Made by Abdelmounaim - <a href="https://github.com/abdelmounaimbahji-bit" target="_blank">here</a> &copy; 2025</p>
   </footer>
 
 </body>
